# esim-manager

./: README.md  index.html  package-lock 2.json  package-lock.json  package.json
.config/: lock.config.json
.github/scripts/: compare_version.py  ensure_rgba_icon.py
.github/workflows/: bump-version.yml  nightly-upx.yml  release-branches.yml  release-multi.yml  sync-core.yml  tauri-build.yml
public/: credits.html  plugin.json
public/preload/: services.js
src/: App.jsx  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/ESIM/: index.css  index.jsx
src/components/: ErrorBoundary.jsx
